tcw3/designer/tests/bad/watch_nonnullary.tcwdl
pub comp crate::Comp1 {
    const wm: tcw3_pal::Wm { pub set; }

    prop field: u32 { pub set; pub watch event(event1); }
    //~^ ERROR The event used for `watch` accessor must have no parameters
    event event1(x: u32);
}
